# publisync

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  Dockerfile.dev  alembic.ini  celerybeat-schedule  pyproject.toml  requirements-dev.txt  requirements.txt  test_burnin.json  test_login.json  test_token.txt
backend/app/: main.py
backend/app/api/v1/: admin.py  ai.py  analytics.py  approvals.py  audit_logs.py  auth.py  calendar.py  channels.py  comments.py  contents.py  dashboard.py  media.py  notifications.py  organizations.py  reply_templates.py  reports.py  search.py  settings_notifications.py  sse.py  users.py  workspaces.py
backend/app/core/: config.py  database.py  deps.py  encryption.py  exceptions.py  logging.py  middleware.py  redis.py  security.py
backend/app/integrations/: webpush.py
backend/app/integrations/ai/: __init__.py
backend/app/integrations/email/: service.py
backend/app/integrations/ffmpeg/: __init__.py  audio.py  common.py  probe.py  subtitle.py  thumbnail.py  trim.py
backend/app/integrations/search/: __init__.py
backend/app/integrations/storage/: __init__.py  base.py  local.py  minio_backend.py  routes.py
backend/app/integrations/telegram/: __init__.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: 001_initial_extensions.py  002_auth_tables.py  003_system_announcements.py  004_channels.py  005_contents.py  006_approvals.py  007_comments_templates.py  008_notifications.py  009_audit_ai_usage.py  010_media_library.py  011_calendar_events.py  012_ai_jobs.py  013_workspaces.py  014_analytics_search.py  (+7 more)
backend/app/models/: __init__.py  ai_usage.py  approval.py  audit.py  base.py  calendar.py  channel.py  comment.py  content.py  enums.py  media.py  notification.py  report.py  user.py
backend/app/repositories/: ai_usage_repository.py  analytics_repository.py  approval_repository.py  audit_repository.py  calendar_repository.py  channel_repository.py  comment_repository.py  content_repository.py  media_repository.py  notification_repository.py  org_repository.py  report_repository.py  user_repository.py
backend/app/schemas/: ai.py  analytics.py  approval.py  audit.py  auth.py  calendar.py  channel.py  comment.py  common.py  content.py  dashboard.py  media.py  notification.py  organization.py  report.py  user.py
backend/app/services/: ai_service.py  analytics_service.py  approval_service.py  audit_service.py  auth_service.py  calendar_service.py  channel_service.py  comment_service.py  content_service.py  dashboard_service.py  media_service.py  notification_service.py  org_service.py  report_service.py  user_service.py
backend/app/tasks/: __init__.py  ai.py  comment.py  publish.py  report.py  search.py  system.py
backend/scripts/: seed.py
backend/tests/: conftest.py  test_ai.py  test_audit.py  test_auth.py  test_comments.py  test_dashboard.py  test_health.py  test_notifications.py
(+248 files in other folders)
